--- a/source/form.html
+++ b/source/form.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>CAT ENERGY: Подбор программы</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
 <header class="page__header page-header">
-    <nav class="page-header-nav">
-      <a  class="page-header__logo logo" href="index.html">
+  <nav class="page-header__nav">
+    <div class="page-header__bar">
+      <a class="page-header__logo logo" >
         <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
         <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
       </a>
@@ -16,38 +18,41 @@
       <button class="page-header__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
+    </div>
 
-      <ul class="page-header__menu site-menu">
-        <li class="site-menu__item">
-          <a class="site-menu__link" href="index.html">
-            Главная
-          </a>
-        </li>
-        <li class="site-menu__item ">
-          <a class="site-menu__link" href="catalog.html">
-            Каталог продукции
-          </a>
-        </li>
-        <li class="site-menu__item site-menu__item--current">
-          <a class="site-menu__link" href="#">
-            Подбор программы
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <ul class="page-header__menu site-menu">
+      <li class="site-menu__item">
+        <a class="site-menu__link" href="index.html">
+          Главная
+        </a>
+      </li>
+      <li class="site-menu__item">
+        <a class="site-menu__link" href="catalog.html">
+          Каталог продукции
+        </a>
+      </li>
+      <li class="site-menu__item  site-menu__item--current">
+        <a class="site-menu__link" href="#">
+          Подбор программы
+        </a>
+      </li>
+    </ul>
+  </nav>
 </header>
 
 <main class="page__main page-main">
+  <header class="page-main__header container">
     <h1 class="page-main__heading">Подбор программы</h1>
     <p class="page-main__subheading">
-        Заполните анкету, и мы подберем программу питания для вашего кота
+      Заполните анкету, и мы подберем программу питания для вашего кота
     </p>
+  </header>
 
     <section class="page-main__section form">
-      <h2 class="visually-hidden">Форма анкеты</h2>
+        <h2 class="visually-hidden">Форма анкеты</h2>
 
-        <form class="form__body" action="https://echo.htmlacademy.ru">
-          <fieldset class="form__group field-group">
+        <form class="form__container container" method="post" action="https://echo.htmlacademy.ru">
+          <fieldset class="form__group form__group--cat field-group">
             <legend class="visually-hidden">Данные кота</legend>
 
             <ul class="field-group__list">
@@ -72,7 +77,7 @@
             </ul>
           </fieldset>
 
-          <fieldset class="form__group field-group">
+          <fieldset class="form__group form__group--target field-group">
             <legend class="visually-hidden">Цель программы</legend>
 
             <ul class="field-group__list">
@@ -97,7 +102,7 @@
             </ul>
           </fieldset>
 
-          <fieldset class="form__group field-group">
+          <fieldset class="form__group form__group--contacts field-group">
             <legend class="visually-hidden">Контактные данные (владельца кота)</legend>
 
             <ul class="field-group__list">
@@ -116,15 +121,15 @@
             </ul>
           </fieldset>
 
-            <div class="form__group field-group">
-              <label class="field-group__heading" for="comment">Комментарий</label>
+          <div class="form__group form__group--comment field-group">
+            <label class="field-group__heading" for="comment">Комментарий</label>
 
-              <div class="field">
-                <textarea class="field__input" name="comment" id="comment" rows="5" placeholder="Расскажите обо всех повадках кота"></textarea>
-              </div>
+            <div class="field">
+              <textarea class="field__input" name="comment" id="comment" rows="5" placeholder="Расскажите обо всех повадках кота"></textarea>
             </div>
+          </div>
 
-          <fieldset class="form__group field-group">
+          <fieldset class="form__group form__group--additional field-group">
             <legend class="visually-hidden"> Дополнительно</legend>
 
             <ul class="field-group__list">
@@ -155,52 +160,59 @@
             </ul>
           </fieldset>
 
-          <button class="form__button button" type="submit">Отправить заявку</button>
-          <p class="form__additional">* — Обязательные поля</p>
+          <div class="form__footer">
+            <button class="form__button button" type="submit">Отправить заявку</button>
+            <p class="form__additional">* — Обязательные поля</p>
+          </div>
+
+
         </form>
     </section>
 
-    <footer class="page-main__footer contacts">
-        <h2 class="visually-hidden"> Контакты компании </h2>
-        <p class="contacts__text">
-            Приглашаем к сотрудничеству дилеров!
-        </p>
-        <p class="contacts__address">
-            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-        </p>
-        <img class="contacts__map" src="img/map-mobile.png" width="640" height="724"
-             alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
-    </footer>
+  <footer class="page-main__footer contacts">
+    <h2 class="visually-hidden"> Контакты компании </h2>
+
+    <div class="contacts__container container">
+      <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+
+      <img class="contacts__map" src="img/map-mobile.png" width="320" height="362"
+           alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
+    </div>
+  </footer>
 </main>
 
 <footer class="page__footer page-footer">
-  <a class="page-footer__logo logo">
-    <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
-  </a>
+  <div class="page-footer__container container">
+    <a class="page-footer__logo logo">
+      <img class="logo__sign" src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
+    </a>
 
-  <ul class="page-footer__social social">
-    <li class="social__item">
-      <a class="social__link" href="#">
-        <span class="visually-hidden">Вконтакте</span>
-      </a>
-    </li>
-    <li class="social__item">
-      <a class="social__link" href="#">
-        <span class="visually-hidden">Instagram</span>
-      </a>
-    </li>
-    <li class="social__item">
-      <a class="social__link" href="#">
-        <span class="visually-hidden">Facebook</span>
-      </a>
-    </li>
-  </ul>
+    <ul class="page-footer__social social">
+      <li class="social__item">
+        <a class="social__link" href="#">
+          <span class="visually-hidden">Вконтакте</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link" href="#">
+          <span class="visually-hidden">Instagram</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link" href="#">
+          <span class="visually-hidden">Facebook</span>
+        </a>
+      </li>
+    </ul>
 
-  <a class="page-footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive">
-    <span class="visually-hidden">Разработано в</span>
-    HTML Academy
-    <img class="developer__image" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="" aria-hidden="true">
-  </a>
+    <a class="page-footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive">
+      <span class="visually-hidden">Разработано в</span>
+      HTML Academy
+      <img class="developer__image" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="" aria-hidden="true">
+    </a>
+  </div>
+
 </footer>
 
 </body>
