--- a/source/index.html
+++ b/source/index.html
@@ -93,7 +93,7 @@
               Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
-          <li class="process__item process__item--neal">
+          <li class="process__item process__item--meal">
             <p class="process__text">
               Замените один-два приема обычной еды на наше функциональное питание.
             </p>
