--- a/source/index.html
+++ b/source/index.html
@@ -110,18 +110,23 @@
     <section class="page-main__section example">
       <div class="example__container container">
         <div class="example__content">
-          <h2 class="page-main__heading">Живой пример</h2>
+          <h2 class="page-main__heading example__heading">Живой пример</h2>
           <p class="example__text">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
             Отличный результат без изнуряющих тренировок!
             При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
           <dl class="example__list">
-            <dt class="example__title">Снижение веса</dt>
-            <dd class="example__definition">5 кг</dd>
+            <div class="example__item">
+              <dt class="example__title">Снижение веса</dt>
+              <dd class="example__definition">5 кг</dd>
+            </div>
 
-            <dt class="example__title">Затрачено времени</dt>
-            <dd class="example__definition">60 дней</dd>
+            <div class="example__item">
+              <dt class="example__title">Затрачено времени</dt>
+              <dd class="example__definition">60 дней</dd>
+            </div>
+
           </dl>
 
           <p class="example__spending">Затраты на питание: 15 000 руб.</p>
@@ -130,14 +135,18 @@
 
         <div class="example__view">
           <div class="example__images">
-            <img class="example__image" src="img/example/before-mobile.png" width="280" height="232"
+            <img class="example__image example__image--active" src="img/example/before-mobile.png" width="280" height="232"
                  alt="Фотография кота до похудения">
             <img class="example__image" src="img/example/after-mobile.png" width="243" height="232"
                  alt="Фотография кота после похудения">
           </div>
 
-          <div class="example__switcher switcher">
+          <div class="example__switcher switcher b">
             <button class="switcher__button" type="button">Было</button>
+            <div class="switcher__toggler "></div>
+            <label class="switcher__bar">
+              <input  type="range" value="50" min="17" max="83">
+            </label>
             <button class="switcher__button" type="button">Стало</button>
           </div>
         </div>
