--- a/source/index.html
+++ b/source/index.html
@@ -8,19 +8,19 @@
   </head>
   <body class="page__body">
   <header class="page__header page-header container">
-    <nav class="page-header__nav">
-      <div class="page-header__bar">
-        <a class="page-header__logo logo" >
+    <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
+      <div class="main-nav__bar">
+        <a class="main-nav__logo logo" >
           <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
           <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
         </a>
 
-        <button class="page-header__toggle" type="button">
+        <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
 
-      <ul class="page-header__menu site-menu site-menu--desktop-main">
+      <ul class="main-nav__menu site-menu site-menu--desktop-main">
         <li class="site-menu__item site-menu__item--current">
           <a class="site-menu__link">
             Главная
@@ -231,7 +231,8 @@
         </svg>
       </a>
     </div>
-
   </footer>
+
+  <script src="./js/app.js"></script>
   </body>
 </html>
