--- a/source/catalog.html
+++ b/source/catalog.html
@@ -42,7 +42,7 @@
 
 <main class="page__main page-main">
   <header class="page-main__header container">
-    <h1 class="page-main__heading">Каталог продукции</h1>
+    <h1 class="page-main__heading">Каталог продукции </h1>
   </header>
 
     <section class="page-main__section catalog-list">
@@ -51,7 +51,7 @@
 
         <article class="catalog-list__item card">
           <a class="card__link">
-            <h3 class="card__heading">Cat Energy PRO 500 г</h3>
+            <h3 class="card__heading">Cat Energy PRO 500&nbsp;г </h3>
           </a>
 
           <img class="card__img" src="img/goods/catalog-1-mobile.png" width="68" height="86"
@@ -73,7 +73,7 @@
 
         <article class="catalog-list__item card">
           <a class="card__link">
-            <h3 class="card__heading">Cat Energy PRO 1000 г</h3>
+            <h3 class="card__heading">Cat Energy PRO 1000&nbsp;г</h3>
           </a>
 
           <img class="card__img" src="img/goods/catalog-2-mobile.png" width="84" height="101"
@@ -95,7 +95,7 @@
 
         <article class="catalog-list__item card">
           <a class="card__link">
-            <h3 class="card__heading">Cat Energy PRO 500 г</h3>
+            <h3 class="card__heading">Cat Energy PRO 500&nbsp;г</h3>
           </a>
 
           <img class="card__img" src="img/goods/catalog-3-mobile.png" width="68" height="78"
@@ -117,7 +117,7 @@
 
         <article class="catalog-list__item card">
           <a class="card__link">
-            <h3 class="card__heading">Cat Energy PRO 1000 г</h3>
+            <h3 class="card__heading">Cat Energy PRO 1000&nbsp;г</h3>
           </a>
 
           <img class="card__img" src="img/goods/catalog-4-mobile.png" width="84" height="101"
@@ -139,7 +139,7 @@
 
         <article class="catalog-list__item card">
           <a class="card__link">
-            <h3 class="card__heading">Cat Energy SLIM 500 г</h3>
+            <h3 class="card__heading">Cat Energy SLIM 500&nbsp;г</h3>
           </a>
 
           <img class="card__img" src="img/goods/catalog-5-mobile.png" width="68" height="78"
