--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,11 @@
   <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
     <div class="main-nav__bar">
       <a class="main-nav__logo logo" >
-        <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
+        <picture>
+          <source media="(min-width: 1280px)" srcset="./img/logo-image-desktop.svg">
+          <source media="(min-width: 767px)" srcset="./img/logo-image-tablet.svg">
+          <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
+        </picture>
         <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
       </a>
 
