--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,8 +58,12 @@
             <h3 class="card__heading">Cat Energy PRO 500&nbsp;г </h3>
           </a>
 
-          <img class="card__img" src="img/goods/catalog-1-mobile.png" width="68" height="86"
-               alt="" aria-hidden="true">
+          <picture class="card__picture">
+            <source media="(min-width: 1280px)" srcset="./img/catalog/catalog-1-desktop.png 1x, img/catalog/catalog-1-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="./img/catalog/catalog-1-tablet.png 1x, img/catalog/catalog-1-tablet@2x.png 2x">
+            <img class="card__img" src="./img/catalog/catalog-1-mobile.png" srcset="./img/catalog/catalog-1-mobile@2x.png 2x"
+                 width="68" height="86" alt="" aria-hidden="true">
+          </picture>
 
           <dl class="card__list">
             <dt class="card__title">Масса</dt>
@@ -80,8 +84,12 @@
             <h3 class="card__heading">Cat Energy PRO 1000&nbsp;г</h3>
           </a>
 
-          <img class="card__img" src="img/goods/catalog-2-mobile.png" width="84" height="101"
-               alt="" aria-hidden="true">
+          <picture class="card__picture">
+            <source media="(min-width: 1280px)" srcset="./img/catalog/catalog-2-desktop.png 1x, img/catalog/catalog-2-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="./img/catalog/catalog-2-tablet.png 1x, img/catalog/catalog-2-tablet@2x.png 2x">
+            <img class="card__img" src="img/catalog/catalog-2-mobile.png" srcset="./img/catalog/catalog-2-mobile@2x.png 2x" width="84" height="101"
+                 alt="" aria-hidden="true">
+          </picture>
 
           <dl class="card__list">
             <dt class="card__title">Масса</dt>
@@ -102,8 +110,12 @@
             <h3 class="card__heading">Cat Energy PRO 500&nbsp;г</h3>
           </a>
 
-          <img class="card__img" src="img/goods/catalog-3-mobile.png" width="68" height="78"
-               alt="" aria-hidden="true">
+          <picture class="card__picture">
+            <source media="(min-width: 1280px)" srcset="./img/catalog/catalog-3-desktop.png 1x, img/catalog/catalog-3-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="./img/catalog/catalog-3-tablet.png 1x, img/catalog/catalog-3-tablet@2x.png 2x">
+            <img class="card__img" src="img/catalog/catalog-3-mobile.png" srcset="./img/catalog/catalog-3-mobile@2x.png 2x" width="68" height="78"
+                 alt="" aria-hidden="true">
+          </picture>
 
           <dl class="card__list">
             <dt class="card__title">Масса</dt>
@@ -124,8 +136,12 @@
             <h3 class="card__heading">Cat Energy PRO 1000&nbsp;г</h3>
           </a>
 
-          <img class="card__img" src="img/goods/catalog-4-mobile.png" width="84" height="101"
-               alt="" aria-hidden="true">
+          <picture class="card__picture">
+            <source media="(min-width: 1280px)" srcset="./img/catalog/catalog-4-desktop.png 1x, img/catalog/catalog-4-desktop@2X.png 2x">
+            <source media="(min-width: 768px)" srcset="./img/catalog/catalog-4-tablet.png 1x, img/catalog/catalog-4-tablet@2x.png 2x">
+            <img class="card__img" src="img/catalog/catalog-4-mobile.png" srcset="./img/catalog/catalog-4-mobile@2x.png 2x" width="84" height="101"
+                 alt="" aria-hidden="true">
+          </picture>
 
           <dl class="card__list">
             <dt class="card__title">Масса</dt>
@@ -146,8 +162,12 @@
             <h3 class="card__heading">Cat Energy SLIM 500&nbsp;г</h3>
           </a>
 
-          <img class="card__img" src="img/goods/catalog-5-mobile.png" width="68" height="78"
-               alt="" aria-hidden="true">
+          <picture class="card__picture">
+            <source media="(min-width: 1280px)" srcset="./img/catalog/catalog-5-desktop.png 1x, img/catalog/catalog-5-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="./img/catalog/catalog-5-tablet.png 1x, img/catalog/catalog-5-tablet@2x.png 2x">
+            <img class="card__img" src="img/catalog/catalog-5-mobile.png" width="68" height="78"
+                 alt="" aria-hidden="true">
+          </picture>
 
           <dl class="card__list">
             <dt class="card__title">Масса</dt>
@@ -168,8 +188,12 @@
             <h3 class="card__heading">Cat Energy SLIM 1000&nbsp;г</h3>
           </a>
 
-          <img class="card__img" src="img/goods/catalog-6-mobile.png" width="84" height="100"
-               alt="" aria-hidden="true">
+          <picture class="card__picture">
+            <source media="(min-width: 1280px)" srcset="./img/catalog/catalog-6-desktop.png 1x, img/catalog/catalog-6-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="./img/catalog/catalog-6-tablet.png 1x, img/catalog/catalog-6-tablet@2x.png 2x">
+            <img class="card__img" src="img/catalog/catalog-6-mobile.png" width="84" height="100"
+                 alt="" aria-hidden="true">
+          </picture>
 
           <dl class="card__list">
             <dt class="card__title">Масса</dt>
@@ -190,8 +214,12 @@
             <h3 class="card__heading">Cat Energy SLIM 500&nbsp;г</h3>
           </a>
 
-          <img class="card__img" src="img/goods/catalog-7-mobile.png" width="72" height="84"
-               alt="" aria-hidden="true">
+          <picture class="card__picture">
+            <source media="(min-width: 1280px)" srcset="./img/catalog/catalog-7-desktop.png 1x, img/catalog/catalog-7-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="./img/catalog/catalog-7-tablet.png 1x, img/catalog/catalog-7-tablet@2x.png 2x">
+            <img class="card__img" src="img/catalog/catalog-7-mobile.png" width="72" height="84"
+                 alt="" aria-hidden="true">
+          </picture>
 
           <dl class="card__list">
             <dt class="card__title">Масса</dt>
