--- a/source/catalog.html
+++ b/source/catalog.html
@@ -324,7 +324,7 @@
           <span>Санкт-Петербург </span></p>
       </div>
     </div>
-    <img class="contacts__img" src="img/map-desktop.png" width="1440" height="400"
+    <img class="contacts__img" src="img/map-desktop.png" srcset="././img/map-desktop@2x.png 2x" width="1440" height="400"
          alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
 
     <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad224644410c55b2ed14431db75f96f5f9b20f7bae6f613c488ede772f53925b8&amp;source=constructor"></iframe>
