--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>CAT ENERGY: Подбор программы</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page__body">
 <header class="page__header page-header container">
